add sam api docs
